feat: Implement Pay installment for a given loan and amount